Bug 382409 - Preview pane does not display thunbnails
Summary: Preview pane does not display thunbnails
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-07-16 20:20 UTC by Dean DeFreitas
Modified: 2017-10-08 21:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.1
Sentry Crash Report:


Attachments
Screenshot (180.33 KB, image/png)
2017-07-16 20:20 UTC, Dean DeFreitas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dean DeFreitas 2017-07-16 20:20:53 UTC
Created attachment 106669 [details]
Screenshot

The preview pane (bottom right) does not display thumbnails when built on Fedora 24 system. See attached screenshot.  Same issue was noted on both 3.0 and 3.0.1 as well.

Environment:
KDE Frameworks 5.33.0
Qt 5.6.2 (built against 5.6.2)
The xcb windowing system
plasma-workspace-common-5.8.7-1.fc24.x86_64
Linux (x86_64) release 4.11.9-100.fc24.x86_64


These are the only optional components not compiled in:
-- The following OPTIONAL packages have not been found:

 * KF5Cddb , Support for CDDB searches , <https://cgit.kde.org/libkcddb.git>
 * Btparse , External support for parsing and processing BibTeX data files , <https://metacpan.org/release/Text-BibTeX>

Build process:
mkdir build && cd build
cmake .. -DCMAKE_INSTALL_PREFIX=/usr && make -j5 && sudo make install


This is the only issue keeping me migrating from tellico-2.3.11-1.fc24.x86_64 in the Fedora repositories.  All other functionality works as expected thus far.

Dean
Comment 1 Robby Stephenson 2017-07-21 12:39:32 UTC
With Tellico 3, the thumbnails will be in the top area. There are buttons to switch between the column view and the icon view, and the lower right will only be for entry details. 

What sequence did you use to end up with the blank area? At start-up, Tellico should some introduction text there, and then whoever an entry is selected, the info is displayed. But it shouldn't ever go blank, that's definitely not intended.

Selecting a group on the left will no longer filter by that group on selection, you have to right-click and "Filter by Group". Does that help?
Comment 2 Robby Stephenson 2017-10-08 21:11:35 UTC
Git commit 29e4bbf3ea96521ec721714a8929e27b0dabd249 by Robby Stephenson.
Committed on 08/10/2017 at 20:14.
Pushed by rstephenson into branch 'master'.

Show welcome text even when opening an existing collection
FIXED-IN: 3.1

M  +2    -2    src/entryview.cpp
M  +5    -12   src/groupview.cpp
M  +21   -19   src/mainwindow.cpp

https://commits.kde.org/tellico/29e4bbf3ea96521ec721714a8929e27b0dabd249