Show welcome text even when opening an existing collection

BUG: 382409
FIXED-IN: 3.1